changed h3,h2 font size. fixed spacing on media and merch items

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -22,11 +22,17 @@ h1 {
   line-height: 0;
 }
 h2 {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
+}
+h3 {
+  font-size:2.2rem;
+  margin-bottom:.5rem;
 }
 
 p {
   font-family: "Oswald", sans-serif;
   font-size: 1.2rem;
   line-height: 1.5rem;
+  margin: 0 0 10px;
+
 }
